rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW,RELATED,ESTABLISHED -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate RELATED,ESTABLISHED -m udp --sport 123 -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate RELATED,ESTABLISHED -m tcp --sport 80 -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate ESTABLISHED -m udp --sport 53 -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW,RELATED,ESTABLISHED -m udp --dport 500 -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW,RELATED,ESTABLISHED -m udp --dport 4500 -j ACCEPT
-A INPUT -p esp -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG
COMMIT
